# Example: Build client that composes genrules and macros from other examples
#
# This demonstrates importing and using:
# - Genrules from //bashel/ex-genrule (uppercase, word_count)
# - Macros from //bashel/ex-macros (archive_directory, archive_info)
#
# Realistic workflow: Build configs, normalize them, bundle for deployment

load("//bashel/ex-macros:macros.bzl", "archive_directory", "archive_info")

# === Create raw config files ===

genrule(
    name = "raw_configs",
    outs = [
        "raw/app.conf",
        "raw/database.conf",
        "raw/cache.conf",
    ],
    cmd = """
        mkdir -p $(@D)/raw
        echo 'application configuration settings' > $(@D)/raw/app.conf
        echo 'database connection parameters' > $(@D)/raw/database.conf
        echo 'cache backend configuration' > $(@D)/raw/cache.conf
    """,
)

# === Use ex-genrule tools to process configs ===

# Normalize config text to uppercase
genrule(
    name = "normalized_app_conf",
    srcs = [":raw_configs"],
    outs = ["normalized/app.conf"],
    cmd = """
        set -- $(locations :raw_configs)
        $(location //bashel/ex-genrule:uppercase_sh) input=$$1 $@
    """,
    tools = [
        "//b/lib:lib_sh",
        "//bashel/ex-genrule:uppercase_sh",
    ],
)

genrule(
    name = "normalized_database_conf",
    srcs = [":raw_configs"],
    outs = ["normalized/database.conf"],
    cmd = """
        set -- $(locations :raw_configs)
        $(location //bashel/ex-genrule:uppercase_sh) input=$$2 $@
    """,
    tools = [
        "//b/lib:lib_sh",
        "//bashel/ex-genrule:uppercase_sh",
    ],
)

genrule(
    name = "normalized_cache_conf",
    srcs = [":raw_configs"],
    outs = ["normalized/cache.conf"],
    cmd = """
        set -- $(locations :raw_configs)
        $(location //bashel/ex-genrule:uppercase_sh) input=$$3 $@
    """,
    tools = [
        "//b/lib:lib_sh",
        "//bashel/ex-genrule:uppercase_sh",
    ],
)

# Gather all normalized configs
filegroup(
    name = "normalized_configs",
    srcs = [
        ":normalized_app_conf",
        ":normalized_cache_conf",
        ":normalized_database_conf",
    ],
)

# === Check config sizes ===

genrule(
    name = "config_size_report",
    srcs = [":normalized_app_conf"],
    outs = ["reports/app_size.txt"],
    cmd = "$(location //bashel/ex-genrule:word_count_sh) input=$(location :normalized_app_conf) $@",
    tools = [
        "//b/lib:lib_sh",
        "//bashel/ex-genrule:word_count_sh",
    ],
)

# === Use ex-macros tools to bundle configs ===

# Bundle for production deployment
archive_directory(
    name = "production_config_bundle",
    dir = ":normalized_configs",
    prefix = "prod-configs",
)

# Bundle for staging deployment
archive_directory(
    name = "staging_config_bundle",
    dir = ":normalized_configs",
    prefix = "staging-configs",
)

# === Generate bundle metadata ===

archive_info(
    name = "production_bundle_info",
    archive = ":production_config_bundle",
)

archive_info(
    name = "staging_bundle_info",
    archive = ":staging_config_bundle",
)

# === Build everything ===

filegroup(
    name = "all_outputs",
    srcs = [
        ":config_size_report",
        ":normalized_configs",
        ":production_bundle_info",
        ":production_config_bundle",
        ":staging_bundle_info",
        ":staging_config_bundle",
    ],
)
